Fix content font being too large.

--- a/index.css
+++ b/index.css
@@ -130,6 +130,6 @@ section > ul{
 
 @media (min-width: 810px){
   #content > p {
-    font-size: 800px;
+    font-size: 700px;
   }
 }
